--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "http-server": "^14.1.1"
